# agibot_x1_infer_ArmWalk

./: .gitignore
src/: CMakeLists.txt
src/assistant/robot_description/: package.xml
src/module/control_module/: StateAction_record_6.csv
src/module/control_module/cfg/: rl_x1.yaml  rl_x1_sim.yaml
src/module/control_module/include/control_module/: rl_controller.h
src/module/control_module/src/: rl_controller.cc
src/module/dcu_driver_module/: CMakeLists.txt  ankle_transmission.cc  ankle_transmission.h  dcu_driver_module.cc  dcu_driver_module.h  transmission.h
src/module/dcu_driver_module/cfg/: dcu_x1.yaml
src/module/dcu_driver_module/include/dcu_driver_module/: dcu_driver_module.h  transmission.h
src/module/dcu_driver_module/src/: dcu_driver_module.cc
src/module/dcu_driver_module/xyber_controller/: CMakeLists.txt  README.md
src/module/dcu_driver_module/xyber_controller/example/: main.cpp
src/module/dcu_driver_module/xyber_controller/include/xyber_controller/: common_type.h  xyber_controller.h
src/module/joy_stick_module/: CMakeLists.txt  joy.cc
src/module/joy_stick_module/cfg/: joy_x1.yaml
src/module/rl_control_module/: CMakeLists.txt  global.cc  global.h  rl_controller.cc  rl_controller.h  types.h  utilities.cc
src/module/rl_control_module/cfg/: rl_x1.yaml  rl_x1_sim.yaml
src/module/rl_control_module/cfg/policy/: model.onnx  zy_policy_fixR3.onnx
src/module/rl_control_module/include/rl_control_module/: control_mode.h  rl_control_module.h  rl_controller.h  rotation_tools.h  (+1 more)
src/module/rl_control_module/src/: rl_control_module.cc
